feat(project): enhance setup with guides and release automation
*   Add `CONTRIBUTING.md` and `RULES_OF_CONDUCT.md` for community guidance.
*   Improve `README.md` with more detailed, collapsible badges and new sections.
*   Implement GitHub Actions workflow for automatic release note generation on tag push.
*   Extend `markdown-magic` to support rich, collapsible badge displays.
*   Update `package.json` with repository metadata.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   "author": "",
   "license": "MIT",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ioncakephper/cli-scaffold.git"
+  },
+  "homepage": "https://github.com/ioncakephper/cli-scaffold#readme",
+  "bugs": {
+    "url": "https://github.com/ioncakephper/cli-scaffold/issues"
+  },
   "dependencies": {
     "commander": "^14.0.1",
     "cosmiconfig": "^9.0.0",
