--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -14,13 +14,9 @@ jobs:
       contents: write
 
     steps:
-      - name: Create or update GitHub Release (generate release notes)
-        uses: peter-evans/create-or-update-release@f7e2e6e2e5e2e1e8e1e7e6e5e4e3e2e1e0e9e8e7e6e5e4e3e2e1e0
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: ${{ github.ref_name }}
-          generate_release_notes: true
-          draft: false
-          prerelease: false
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Create Release
+        run: gh release create "${{ github.ref_name }}" --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
