--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v4.1.1
+      - uses: googleapis/release-please-action
         id: release
         with:
           release-type: node
-          package-name: cli-scaffold
+
